meja/tests/shadowing-type-prover.stderr
File "tests/shadowing-type-prover.meja", line 4, characters 7-8:
Error: There is already a type with name t.
