meja/tests/shadowing-type-prover.meja
type t = A;

Prover {
  type t = B;
};
